# New-A7DO

./: A7DO_App_Dashboard.py  A7DO_Dashboard.py  A7DO_Orchestrator.py  Fusiontest.py  GITHUB_REPO_LIST_USAGE.md  README.md  Tree.txt  ZENO_UMBRELLA_SIMULATION_REP.md  a7do_care_bridge.py  a7do_civilisation.py  a7do_environment.py  a7do_human_development.py  a7do_life_controller.py  english_core_curriculum.py  list_github_repos.py  measure_phase_lag.py  pyproject.toml  requirements.txt  run_dashboard.py  simulate_evidence.py  streamlit_autorefresh.py  streamlit_pregnancy_app.py  streamlit_zeno_umbrella_app.py
00_CORE_EXISTENCE/: core_existence.py
01_PHYSICS_SANITY_SANDYS_LAW/: conservation.py  falsifiability.py  gating.py
02_NERVOUS_SYSTEM/: nervous_system.py
03_BODY_SYSTEM/: body.py
04_SENSORY_SYSTEM/: a7do_sensory.py
05_METABOLISM_AND_HOMEOSTASIS/: energy_budget.py  metabolism_master.py  overload.py  recovery.py  regulation.py
06_LIMBIC_AND_VALUE_SYSTEM/: limbic_master.py
07_MEMORY_SYSTEM/: a7do_memory_master.py  autobiographical.py  episodic.py  forgetting.py  procedural.py  semantic.py
08_DEVELOPMENT_SYSTEM/: adolescent.py  adult.py  child.py  embryonic.py  infant.py  pregnancy.py  toddler.py
09_WORLD_MODEL/: agents.py  causality_graph.py  physics.py  prediction.py  time.py  world_model_master.py  world_state.py
10_MULTI_AGENT_COUNCIL/: core_self.py  council.py  critic_agent.py  emotion_agent.py  ethics_agent.py  logic_agent.py  meta_agent.py  planner_agent.py
11_SAFETY_AND_GOVERNANCE/: alignment.py  audit.py  ethics.py  immune_system.py  (+1 more)
(+135 files in other folders)
